Create buildlist before running integration test

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -31,7 +31,9 @@ jobs:
           go: 'true'
 
       - name: Run Integration Test
-        run: make test-integration
+        run: |
+          make buildlist
+          make test-integration
 
   lint:
     runs-on: ubuntu-latest
