--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -18,5 +18,5 @@ runs:
       uses: actions/setup-go@v5
       if: ${{ inputs.go == 'true' }}
       with:
-        go-version: 1.19
+        go-version-file: './go.mod'
         cache: ${{ inputs.go-cache }}
