--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -19,6 +19,18 @@ jobs:
     steps:
       - uses: hmarr/auto-approve-action@v3
 
+  integration-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Setup Environment
+        uses: ./.github/actions/setup-env
+
+      - name: Run Integration Tests
+        run: make test-integration
+
   lint:
     runs-on: ubuntu-latest
     steps:
