--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -37,13 +37,8 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Setup Environment
-        uses: ./.github/actions/setup-env
+      - uses: blocky/actions/go-lint@main
         with:
-          go-cache: 'false'
-
-      - name: Lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.60.3
-          args: --timeout=3m --config=./golangci.yaml
+          go-version-file: './go.mod'
+          config: './configs/golangci.yaml'
+          timeout: '5m'
